improved ingredient management
